Version 5.1.2: (noch nicht veröffentlicht)
==============
- Update Bootstrap von Version 4.0.0 auf Version 4.1.2
- Update momentjs auf Version 0.5.17
- Export-Funktion von Highcharts deaktiviert

geänderte bzw. neu hinzugefügte Dateien (ausgehend vom Verzeichnis /web):
  - ../changelog.txt
  - ./assets/js/moment/moment-timezone-with-data-2012-2022.js
  - ./assets/js/moment/moment-with-locales.min.js
  - header.php
  - version.php (erst mit Release)




Version 5.1.1: 
==============
- Es wurde ein Fehler beim Anzeigen der Error-Seiten behoben. Nun sollten auch die richtigen Meldungen erscheinen, sofern ein falscher Link direkt aufgerufen werden sollte
- Das Link für weitere Infos in der Navbar wurde nun besser positioniert
- Der Link zu den SG-Stats wurde aktualisiert
- Je nach Projekt-Status werden in den Projekt-Details nun mehr oder weniger Angaben zu den errechneten Punkten ausgegeben.


geänderte bzw. neu hinzugefügte Dateien (ausgehend vom Verzeichnis /web):
    - ../changelog.txt
    - ./settings/settings.php
    - ./assets/css/userstats_layout.css
    - error.php
    - index.php
    - project.php
    - nav.php
    - project.php
    - version.php



Version 5.1.0: 
==============
- Das Error-Management für neue Nutzer der BOINC-Userstats wurde verbessert (Issue #21)
  Sofern noch keine Änderungen an den Credits bei den Projekten vorhanden waren, wurde lediglich der Header und Footer angezeigt.
  Nun sollte die Tabelle angezeigt werden und ein Hinweis in den Charts erfolgen, wenn noch keine Daten zum Anzeigen vorhanden sind.
- Integration einer Update-Prüfung
  Diese ist standardmäßig deaktiviert. Zum Aktivieren dieses Features muss in der ./settings/settings.php die Variable $setUpdatecheck auf true gesetzt werden.
  Auch bei deaktivierter Option kann jederzeit über den Aufruf der check_update.php im Browser eine Prüfung erfolgen.